--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 PORT=3000
-MONGO_URI=mongodb://127.0.0.1:27017/user_management
+API_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
+MONGO_URI=mongodb://127.0.0.1:27017/collaborative_editor
 
-ACCESS_TOKEN_SECRET=
-REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=your-strong-access-secret-here
+REFRESH_TOKEN_SECRET=your-strong-refresh-secret-here
+
+# Google OAuth 2.0 Configuration
+# Get these from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
