--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "pdfkit": "^0.13.0",
+    "puppeteer": "^24.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
