refactor: refactor code to be production ready

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ REFRESH_TOKEN_SECRET=your-strong-refresh-secret-here
 # Get these from: https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=your-google-client-id-here
 GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+
+
+UPLOADS_ROOT=/uploads
+AVATARS_SUBDIR=avatars
